--- a/monument-art-store/package.json
+++ b/monument-art-store/package.json
@@ -6,6 +6,7 @@
       "@types/bcryptjs": "^2.4.2",
       "@types/cors": "^2.8.9",
       "@types/jsonwebtoken": "^8.5.0",
+      "@types/multer": "^1.4.5",
       "@types/node": "^8.10.66",
       "nodemon": "^2.0.7",
       "ts-node": "^3.3.0",
@@ -21,9 +22,11 @@
       "express": "^4.15.4",
       "helmet": "^4.3.1",
       "jsonwebtoken": "^8.5.1",
+      "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.29"
+      "typeorm": "0.2.29",
+      "uuid": "^8.3.2"
    },
    "scripts": {
       "tsc": "tsc",
