--- a/monument-art-store/package.json
+++ b/monument-art-store/package.json
@@ -25,6 +25,7 @@
       "multer": "^1.4.2",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
+      "swagger-ui-express": "^4.1.6",
       "typeorm": "0.2.29",
       "uuid": "^8.3.2"
    },
