--- a/monument-art-store/clientApp/angular.json
+++ b/monument-art-store/clientApp/angular.json
@@ -89,7 +89,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./nude_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
