--- a/monument-art-store/clientApp/angular.json
+++ b/monument-art-store/clientApp/angular.json
@@ -90,7 +90,8 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "./nude_modules/ngx-toastr/toastr.css"
+              "./nude_modules/ngx-toastr/toastr.css",
+              "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": []
           }
