--- a/monument-art-store/clientApp/package.json
+++ b/monument-art-store/clientApp/package.json
@@ -18,12 +18,14 @@
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
-    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "ngx-toastr": "^13.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
