--- a/monument-art-store/clientApp/package.json
+++ b/monument-art-store/clientApp/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
